@@ -1,3 +1,7 @@
+2004-06-17  Not Zed  <NotZed@Ximian.com>
+
+	* POTFILES.in: moved the filter files around.
+
 2004-06-17  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
